[gd_scene load_steps=4 format=3 uid="uid://bcmpsrjphck82"]

[ext_resource type="Script" uid="uid://c613tfkj7agnl" path="res://Scripts/platform_collision.gd" id="1_6ck72"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3mywu"]
size = Vector2(32, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdjwi"]
size = Vector2(32, 4.5)

[node name="PlatformCollision" type="StaticBody2D"]
script = ExtResource("1_6ck72")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3mywu")

[node name="pass_point" type="Node2D" parent="."]
position = Vector2(0, -2.5)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -4.75)
shape = SubResource("RectangleShape2D_kdjwi")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
